--- a/templates/index.html
+++ b/templates/index.html
@@ -238,7 +238,7 @@
                                 {{ _('We have published an subscription form for the Job Fair.') }}<br />
                                 {{ _('If you would like to book a slot with our sponsors sign up for the Job Fair session. Do not hessitate since the slots are limited!') }}
                                 <p class="text-center">
-                                <a href="{{ url_for('jobfair_form', lang_code=lang_code) }}" class="btn btn-lg btn-secondary">{{ _('Job Fair sign up form') }}</a>
+                                <a href="{{ url_for('jobfair_form', lang_code=lang_code) }}" class="btn btn-lg btn-secondary" role="button">{{ _('Job Fair sign up form') }}</a>
                                 </p>
                             </p>
                         </div>
