--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -95,6 +95,9 @@
                                         <div class="schedule-slot-info-content">
 				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
 				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+                                            {% if block.desc %}
+                                            <p>{{ block.desc }}</p>
+                                            {% endif %}
 				        				</div><!--Info content end -->
 				        			</div><!-- Slot info end -->
 				        		</div><!-- Slot listing 1 end -->
@@ -114,6 +117,9 @@
                                         <div class="schedule-slot-info-content">
 				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
 				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+                                            {% if block.desc %}
+                                            <p>{{ block.desc }}</p>
+                                            {% endif %}
 				        				</div><!--Info content end -->
 				        			</div><!-- Slot info end -->
 				        		</div><!-- Slot listing 1 end -->
@@ -133,6 +139,9 @@
                                         <div class="schedule-slot-info-content">
 				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
 				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+                                            {% if block.desc %}
+                                            <p>{{ block.desc }}</p>
+                                            {% endif %}
 				        				</div><!--Info content end -->
 				        			</div><!-- Slot info end -->
 				        		</div><!-- Slot listing 1 end -->
@@ -153,6 +162,9 @@
                                         <div class="schedule-slot-info-content">
 				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
 				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+                                            {% if block.desc %}
+                                            <p>{{ block.desc }}</p>
+                                            {% endif %}
 				        				</div><!--Info content end -->
 				        			</div><!-- Slot info end -->
 				        		</div><!-- Slot listing 1 end -->
