--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -1762,7 +1762,7 @@
                                          'She is continuously improving her programming talent in DofE program.') }}
                                 </p>
                             </div>
-                            <a name="session_kupcova"></a>
+                            <a name="speaker_kupcova"></a>
                             <h3 class="ts-speaker-name dark">Eva Kupčová</h3>
                             <p class="ts-speaker-designation">{{ _('High school student') }}</p>
                             <ul class="ts-speaker-social-links">
@@ -2184,6 +2184,78 @@
                     </div><!-- Col end -->
                 </div><!-- Speaker list 40 end -->
             </div><!-- Speaker row 40 -->
+
+            <a name="speaker_kohn"></a>
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kohn.png') }}" />
+                        </div><!--Image end -->
+                        <p/>
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/komm.png') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Tobias Kohn</h3>
+                            <p class="ts-speaker-designation">{{ _('Research associate at University of Cambridge') }}</p>
+                            <ul class="ts-speaker-social-links">
+                                <li><a href="https://tobiaskohn.ch/"><i class="fa fa-globe"></i></a></li>
+{#                                <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Tobias has been teaching at high schools for over ten years, and has written '
+                                         'his PhD thesis in the field of computer science education.  He is currently a '
+                                         'research associate at the University of Cambridge, where he studies '
+                                         'possibilities to optimise scientific Python programs.') }}
+                                </p>
+                            </div>
+                            <a name="speaker_komm"></a>
+                            <h3 class="ts-speaker-name dark">Dennis Komm</h3>
+                            <p class="ts-speaker-designation">{{ _('Lecturer at PH Graubünden and ETH Zurich') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="#"><i class="fa fa-globe"></i></a></li>#}
+{#                                <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in/eva-kupčová-21b33016a/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Dennis studied computer science at RWTH Aachen University, and received '
+                                         'his PhD from ETH Zurich in 2012.  Next to teaching courses at different '
+                                         'schools and universities, he is lecturer at both PH Graubünden and ETH Zurich.  '
+                                         'Besides computer science didactics, his research encompasses different topics '
+                                         'in algorithms and complexity theory.') }}
+                                </p>
+                            </div>
+                            <a name="session_kohn_komm"></a>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Using Python to Teach Algorithmic Efficiency') }}</h4>
+                                <p> {{ _('Python has become one of the most widely used languages in computer science '
+                                         'education, and is in many regards an excellent choice for high school and '
+                                         'college level. However, one of the main tasks of sustainable computer science '
+                                         'education is to go beyond teaching a programming language, and discuss aspects '
+                                         'of “computational thinking". An important example for computational thinking '
+                                         'is a proper analysis of how well an algorithm works, how efficient it is. But '
+                                         'can we really teach efficiency in an introductory Python class?') }}</p>
+                                <p> {{ _('In this workshop, we exemplify how to introduce the notion of time complexity '
+                                         'to young students on both an intuitive and sufficiently formal level. Besides '
+                                         'hands-on examples that we implement in Python, we want to investigate the '
+                                         'theoretical underpinnings that allow us to evaluate and compare different '
+                                         'algorithms for the same class of problems.') }}</p>
+                                <p> {{ _('We assume a background in programming and some basic familiarity with Python.') }}</p>
+                                <p> {{ _('Participants work on their own notebooks.') }} </p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 41 end -->
+            </div><!-- Speaker row 41 -->
 
         </div>
     </section>
