--- a/templates/job-fair.html
+++ b/templates/job-fair.html
@@ -46,15 +46,16 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-            <img class="img-responsive"
+        <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/exponea.jpg') }}"
                  alt="{{ _('Logo Exponea') }}">
-          </div>
+        </div>
       </div>
       <div class="row featurette">
+        <div class="col-md-12">
           <p class="text-justify"></p>
+        </div>
       </div>
       <div class="row featurette">
         <div class="col-md-12">
@@ -74,9 +75,8 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-            <img class="img-responsive"
+          <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/kiwi.svg') }}"
                  alt="{{ _('Logo Kiwi.com') }}">
           </div>
@@ -114,9 +114,8 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-            <img class="img-responsive"
+          <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/kistler.svg') }}"
                  alt="{{ _('Logo Kistler') }}">
           </div>
@@ -154,9 +153,8 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-            <img class="img-responsive"
+          <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/redhat.svg') }}"
                  alt="{{ _('Logo Red Hat') }}">
           </div>
@@ -187,9 +185,8 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-            <img class="img-responsive"
+          <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/rbi.png') }}"
                  alt="{{ _('Logo Red Hat') }}">
           </div>
@@ -216,9 +213,8 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-            <img class="img-responsive"
+          <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/titans.svg') }}"
                  alt="{{ _('Logo Titans') }}">
           </div>
@@ -260,9 +256,8 @@
         <hr/>
 
       <div class="row featurette">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2"></div>
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12 text-center centered">
-            <img class="img-responsive"
+          <div class="col-md-12">
+            <img class="img-responsive center"
                  src="{{ url_for('static', filename='images/partners/segron.png') }}"
                  alt="{{ _('Logo Segron') }}">
           </div>
@@ -309,7 +304,7 @@
       <div class="row featurette">
         <div class="col-md-12">
             <p class="text-center">
-              <a href="{{ url_for('jobfair_form', lang_code=lang_code) }}" class="btn btn-lg btn-secondary">{{ _('Job Fair sign up form') }}</a>
+              <a href="{{ url_for('jobfair_form', lang_code=lang_code) }}" class="btn btn-lg btn-secondary" role="button">{{ _('Job Fair sign up form') }}</a>
             </p>
         </div>
       </div>
