--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -416,6 +416,38 @@
         </div><!-- Col 3 end -->
       </div>
 
+      <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Community Supporters') }}</h3>
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+{#            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt="FIIT STU logo"/>#}
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Erik Pribula</h4>
+{#              <p>&nbsp;</p>#}
+{#              <div class="sponsor-web-link">#}
+{#                <a href="https://www.fiit.stuba.sk/" target="_blank"><i class="fa fa-globe"></i></a>#}
+{#                <a href="https://www.facebook.com/FIIT.STU/" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#              </div>#}
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+{#            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt="FIIT STU logo"/>#}
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Tibor Arpáš</h4>
+{#              <p>&nbsp;</p>#}
+{#              <div class="sponsor-web-link">#}
+{#                <a href="https://www.fiit.stuba.sk/" target="_blank"><i class="fa fa-globe"></i></a>#}
+{#                <a href="https://www.facebook.com/FIIT.STU/" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#              </div>#}
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+      </div>
+
     </div>
   </section>
 
