Updated typo in link and name

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -88,7 +88,7 @@
                     </a>
                 </div><!-- Col end -->
                 <div class="col-md-2 text-center">
-                    <a href="https://www.linkedin.com/in/marekbruchaty/" target="_blank">
+                    <a href="#" target="_blank">
                         <img src="{{ url_for('static', filename='images/pycon_logo_square.png') }}"
                              alt="Samuel Braniša"
                              class="avatar"/><br/>
@@ -137,7 +137,7 @@
                         <img src="{{ url_for('static', filename='images/pycon_logo_square.png') }}"
                              alt="Jan Lehky"
                              class="avatar"/><br/>
-                        Jan Lehky
+                        Jan Lehký
                     </a>
                 </div><!-- Col end -->
 
