--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -133,8 +133,8 @@
                     </a>
                 </div><!-- Col end -->
                 <div class="col-md-2 text-center">
-                    <a href="#" target="_blank">
-                        <img src="{{ url_for('static', filename='images/pycon_logo_square.png') }}"
+                    <a href="https://www.linkedin.com/in/jan-lehky-564a24130/" target="_blank">
+                        <img src="{{ url_for('static', filename='images/avatar/jan_lehky.jpg') }}"
                              alt="Jan Lehky"
                              class="avatar"/><br/>
                         Jan Lehký
