--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -414,6 +414,22 @@
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 3 end -->
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/bts-group.png') }}" alt="BTS group logo"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">BTS Group</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="http://btsgroup.sk/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/BornToStream/" target="_blank"><i class="fa fa-facebook"></i></a>
+{#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+                <a href="https://www.instagram.com/bts_group_official/" target="_blank"><i class="fa fa-instagram"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 4 end -->
       </div>
 
       <div class="row text-center">
