added missing community supporters

--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -461,7 +461,50 @@
 {#              </div>#}
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
-        </div><!-- Col 1 end -->
+        </div><!-- Col 2 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+{#            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt="FIIT STU logo"/>#}
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Filip Kłębczyk</h4>
+{#              <p>&nbsp;</p>#}
+{#              <div class="sponsor-web-link">#}
+{#                <a href="https://www.fiit.stuba.sk/" target="_blank"><i class="fa fa-globe"></i></a>#}
+{#                <a href="https://www.facebook.com/FIIT.STU/" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#              </div>#}
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 3 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+{#            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt="FIIT STU logo"/>#}
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Lumír Balhar</h4>
+{#              <p>&nbsp;</p>#}
+{#              <div class="sponsor-web-link">#}
+{#                <a href="https://www.fiit.stuba.sk/" target="_blank"><i class="fa fa-globe"></i></a>#}
+{#                <a href="https://www.facebook.com/FIIT.STU/" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#              </div>#}
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 4 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+{#            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt="FIIT STU logo"/>#}
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Christoph Schindler</h4>
+{#              <p>&nbsp;</p>#}
+{#              <div class="sponsor-web-link">#}
+{#                <a href="https://www.fiit.stuba.sk/" target="_blank"><i class="fa fa-globe"></i></a>#}
+{#                <a href="https://www.facebook.com/FIIT.STU/" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#              </div>#}
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 5 end -->
+
       </div>
 
     </div>
