Updated speaker profile

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -2134,8 +2134,8 @@
                             <p class="ts-speaker-designation">{{ _('Developer at Radar Services and flutist at University of Arts') }}</p>
                             <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-globe"></i></a></li>#}
-                                <li><a href="https://www.facebook.com/ingrid.budau"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://www.instagram.com/ingrid_budau/"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/ingrid.budau.7"><i class="fa fa-facebook"></i></a></li>
+{#                                <li><a href="https://www.instagram.com/ingrid_budau/"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
 {#                                <li><a href="https://www.linkedin.com/in/johno/"><i class="fa fa-linkedin"></i></a></li>#}
                             </ul>
