Updated live stream link

--- a/templates/livestream.html
+++ b/templates/livestream.html
@@ -15,19 +15,7 @@
             <div class="row text-center">
                 <h3>Aula Magna</h3>
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe src="https://www.youtube.com/embed/1tJ7KSpw180" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                </div>
-            </div><!--/ Title row end -->
-
-        </div>
-
-        <div class="container">
-            <div class="row text-center">
-                <h3>Aula Minor</h3>
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe src="https://www.youtube.com/embed/XSLuT3YCRMU" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/vu0iPnDqhik" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                 </div>
