added sponsors of edusummit

--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -35,7 +35,7 @@
                      'moment experiences to their customers at scale through deeply embedded AI-powered capabilities '
                      'and leverage intent to purchase both on your online store or outside of it.') }}<br />
                 {{ _('We enable the fast transfer of know-how, resulting in a change of mindset and is a catalyst for '
-                     'a rapid, profitable growth of emerging e-commerce leaders around the') }}
+                     'a rapid, profitable growth of emerging e-commerce leaders around the globe.') }}
               </p>
               <div class="sponsor-web-link">
                 <a href="https://exponea.com/" target="_blank"><i class="fa fa-globe"></i></a>
