--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
         <div class="banner-item">
             <div class="container">
                 <div class="banner-content text-center">
-                    <h1 class="banner-title">{{ _('<span>Be a part of </span>PyCon SK 2019') }}</h1>
+                    <h1 class="banner-title">{{ _('PyCon SK 2019 <span>is over</span>') }}</h1>
+                    <h2 class="banner-desc">{{ _('Thank you for your support') }}</h2>
                     <h2 class="banner-desc">
                         <span class="first">{{ _('22-24 March') }}</span><span>Bratislava</span><span>2019</span></h2>
                 </div>
@@ -63,10 +64,10 @@
                         <h2 class="intro-title">PyCon SK 2019</h2>
 
                         <p class="intro-desc lead">
-                            {{ _('<strong>Fourth year</strong> will take place from <strong>22 to 24 March 2019 in Bratislava</strong>.') }}
+                            {{ _('<strong>Fourth year</strong> took place from <strong>22 to 24 March 2019 in Bratislava</strong>.') }}
                         </p>
                         <p>
-                            {{ _('The PyCon SK 2019 conference, which will be held in Bratislava, is the annual gathering for the community using and developing the open-source Python programming language. It is organized by the volunteers from the SPy o.z., civic association dedicated to advancing and promoting Python and other Open Source technologies and ideas. Through PyCon, the SPy o.z. advances its mission of growing the Slovak (and also international) community of Python programmers and Open Source supporters.') }}
+                            {{ _('The PyCon SK 2019 conference, held in Bratislava, is the annual gathering for the community using and developing the open-source Python programming language. It is organized by the volunteers from the SPy o.z., civic association dedicated to advancing and promoting Python and other Open Source technologies and ideas. Through PyCon, the SPy o.z. advances its mission of growing the Slovak (and also international) community of Python programmers and Open Source supporters.') }}
                         </p>
                         <p>
                             {{ _('Because PyCon SK is backed by the non-profit SPy, we keep registration costs much lower than comparable technology conferences (or other conferences in neighbor countries) so that PyCon remains accessible to the widest group possible.') }}
